# lmms

./: .clang-format  .travis.yml  CMakeLists.txt  lmms.cbp
plugins/: CMakeLists.txt  RemoteVstPlugin
plugins/Amplifier/: Amplifier.cpp  AmplifierControlDialog.cpp  AmplifierControlDialog.h  AmplifierControls.cpp
plugins/AmplifierGDX/: AmplifierGDX.cpp  AmplifierGDX.h  AmplifierGDXControls.cpp  AmplifierGDXControls.h  AmplifierGDXDialog.cpp  AmplifierGDXDialog.h  CMakeLists.txt
plugins/BassBooster/: BassBooster.cpp
plugins/Bitcrush/: Bitcrush.cpp  Bitcrush.h  BitcrushControlDialog.cpp  BitcrushControls.cpp
plugins/ChainGDX/: CMakeLists.txt  ChainGDX.cpp  ChainGDX.h  ChainGDXControlDialog.cpp  ChainGDXControls.cpp  ChainGDXControls.h  ChainGDXDialog.cpp  ChainGDXDialog.h
plugins/ChannellerGDX/: CMakeLists.txt  ChannellerGDX.cpp  ChannellerGDX.h  ChannellerGDXControls.cpp  ChannellerGDXControls.h  ChannellerGDXDialog.cpp  ChannellerGDXDialog.h
plugins/ClickGDX/: CMakeLists.txt  ClickGDX.cpp  ClickGDX.h  ClickGDXControlDialog.cpp  ClickGDXControls.h  ClickGDXDialog.cpp  ClickGDXDialog.h
plugins/Compressor/: CMakeLists.txt  Compressor.cpp  Compressor.h  CompressorControlDialog.cpp  CompressorControlDialog.h  CompressorControls.cpp  CompressorControls.h
plugins/CompressorGDX/: CMakeLists.txt  CompressorGDX.cpp  CompressorGDX.h  CompressorGDXControlDialog.cpp  CompressorGDXControlDialog.h  CompressorGDXControls.cpp  CompressorGDXControls.h  CompressorGDXDialog.cpp  CompressorGDXDialog.h
plugins/CrossoverEQ/: CrossoverEQ.cpp  CrossoverEQControlDialog.cpp
plugins/Delay/: DelayControlsDialog.cpp  DelayControlsDialog.h  DelayEffect.cpp
plugins/DistortorGDX/: CMakeLists.txt  DistortorGDX.cpp  DistortorGDX.h  DistortorGDXControls.cpp  DistortorGDXControls.h  DistortorGDXDialog.cpp  DistortorGDXDialog.h
plugins/DualFilter/: DualFilter.cpp  DualFilter.h  DualFilterControlDialog.cpp  DualFilterControlDialog.h  DualFilterControls.cpp
plugins/Eq/: EqControls.cpp  EqControls.h  EqControlsDialog.cpp  EqControlsDialog.h  EqCurve.h  EqEffect.cpp  EqEffect.h  EqFader.h  EqFilter.h  EqSpectrumView.cpp  EqSpectrumView.h
plugins/Flanger/: FlangerControlsDialog.cpp  FlangerControlsDialog.h  FlangerEffect.cpp  Noise.cpp  Noise.h
plugins/Format12Export/: CMakeLists.txt  Format12Export.cpp  Format12Export.h
plugins/FrequencyGDX/: CMakeLists.txt  FrequencyGDX.cpp  FrequencyGDX.h  FrequencyGDXControls.cpp  FrequencyGDXControls.h  FrequencyGDXDialog.cpp  FrequencyGDXDialog.h
plugins/GigPlayer/: GigPlayer.cpp  GigPlayer.h
plugins/HydrogenImport/: HydrogenImport.cpp  HydrogenImport.h
plugins/Ilv2GDX/: CMakeLists.txt
plugins/InputGDX/: CMakeLists.txt  InputGDX.cpp  InputGDX.h  InputGDXControls.cpp  InputGDXControls.h  InputGDXDialog.cpp  InputGDXDialog.h
plugins/Inspector/: CMakeLists.txt  Inspector.cpp  Inspector.h  InspectorView.cpp  InspectorView.h
plugins/LV2EffectGDX/: CMakeLists.txt  LV2EffectGDX.cpp  LV2EffectGDX.h  LV2EffectGDXControlDialog.cpp  LV2EffectGDXControlDialog.h  LV2EffectGDXControls.cpp  LV2EffectGDXControls.h  LV2EffectGDXSubPluginFeatures.cpp  LV2EffectGDXSubPluginFeatures.h
plugins/LadspaEffect/: CMakeLists.txt  LadspaControlDialog.cpp  LadspaControls.cpp  LadspaControls.h  LadspaDialog.cpp  LadspaDialog.h  LadspaEffect.cpp  LadspaEffect.h  LadspaSubPluginFeatures.cpp
plugins/Microwave/: CMakeLists.txt  MSynth.cpp  MSynth.h  Microwave Manual.txt  Microwave.cpp  Microwave.h  MicrowaveView.cpp  MicrowaveView.h
plugins/MidiExport/: MidiExport.cpp  MidiExport.h
plugins/MidiImport/: MidiImport.cpp
plugins/MidiSwing/: MidiSwingEffect.cpp  MidiSwingEffect.h
plugins/MultitapEcho/: MultitapEcho.cpp  MultitapEcho.h  MultitapEchoControlDialog.cpp  MultitapEchoControls.cpp  MultitapEchoControls.h
plugins/NormalizeGDX/: CMakeLists.txt  NormalizeGDX.cpp  NormalizeGDX.h  NormalizeGDXControls.cpp  NormalizeGDXControls.h  NormalizeGDXDialog.cpp  NormalizeGDXDialog.h
plugins/PadsGDX/: Makefile  (+8 more)
(+805 files in other folders)
